temporary removal of landing page

--- a/index.html
+++ b/index.html
@@ -46,225 +46,9 @@
         <a href="./startup" class="callButton halfScreen">A FOUNDER</a>
       </div>
     </div>
-    <div class="ecosystemBackground" id="shrinkingBox">
-      <div class="ecosystem">
-        <div class="whiteTitle">
-          Our Network
-        </div>
-        <div class="flexRow spaceBetween column800">
-          <div class="flexColumn numCol">
-            <div class="num">20</div>
-            <div class="numText">accelerators</div>
-          </div>
-          <div class="flexColumn numCol">
-            <div class="num">35<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
-            <div class="numText">angels</div>
-          </div>
-          <div class="flexColumn numCol">
-            <div class="num">400<span class="num" style="font-size: 80px; line-height: 0;">+</span></div>
-            <div class="numText">companies</div>
-          </div>
-          <!-- <div class="flexColumn numCol">
-            <div class="num">5<span class="num" style="font-size: 80px"></span></div>
-            <div class="numText">speakers</div>
-          </div> -->
-        </div>
-      </div>
-    </div>
-    <div class="emptySpace"></div>
-
-    <div class="infoMargin">
-      <div class="whiteTitle" style="color: #721cff">
-        Angel Investing
-      </div>
-      <div class="whiteText">Moonarch provides access to a data room of hundreds of currated startups in their early-stage funding rounds. We also provide warm intros with any founder and startup that caught your attention as well as access to prominent events accross North America</div>
-    </div>
-    <div style="height: 50px"></div>
-    <a href="./angel" class="callButton centerButton">LEARN MORE...</a>
-
-    <div class="emptySpace"></div>
-    <div class="emptySpace"></div>
-
-    <div class="infoMargin">
-      <div class="whiteTitle" style="color: #721cff">
-        Startup Founder
-      </div>
-      <div class="whiteText">Apply today to get exposure to a wide network of angels with a diverse and successful background. Our angel network includes companies such as:</div>
-    </div>
-    <div class="infoMargin">
-      <div class="flexRow flexCenter flexWrap reveal">
-        <div class="flexColumn aroundPartner">
-          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/google.png" /></div>
-        </div>
-        <div class="flexColumn aroundPartner">
-          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/microsoft.png" /></div>
-        </div>
-        <div class="flexColumn aroundPartner">
-          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/coinbase.png" /></div>
-        </div>
-        <div class="flexColumn aroundPartner">
-          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/deloitte.png" /></div>
-        </div>
-        <div class="flexColumn aroundPartner">
-          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/bcg.png" /></div>
-        </div>
-        <div class="flexColumn aroundPartner">
-          <div class="compLogo"><img class="accImg" src="assets/angelCompanies/scale.png" /></div>
-        </div>
-      </div>
-      <div style="height: 20px"></div>
-      <div class="smallTitle">and more</div>
-    </div>
-    <div style="height: 20px"></div>
-    <a href="./startup" class="callButton centerButton">LEARN MORE...</a>
-
-    <div class="emptySpace"></div>
-    <div class="emptySpace"></div>
-
-    <div class="infoMargin"> 
-      <div class="whiteTitle" style="color: #721cff">
-        Our Private Events
-      </div>
-      <div class="whiteText">Meet exited-unicorn founders, MPs at prominent funds who will speak on how to foster an investment thesis, diligence strategies & much more!</div>
-      <div class="flexRow flexCenter flexWrap">
-        <div class="flexColumn flexCenter speakerBox reveal">
-          <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
-          <div class="blackTitle speakerTitle">Alex Normon</div>
-          <div class="greyText">N49P Partner, AngelList Canada</div>
-          <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
-        </div>
-        <div class="flexColumn flexCenter speakerBox reveal">
-          <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
-          <div class="blackTitle speakerTitle">Jeff Hoffman</div>
-          <div class="greyText">Investor, Philanthropist</div>
-          <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
-        </div>
-        <div class="flexColumn flexCenter speakerBox reveal">
-          <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
-          <div class="blackTitle speakerTitle">Andre Charoo</div>
-          <div class="greyText">Maple GP & Inovia Venture Partner</div>
-          <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
-        </div>
-        <div class="flexColumn flexCenter speakerBox reveal">
-          <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
-          <div class="blackTitle speakerTitle">Geri Kirilova</div>
-          <div class="greyText">Laconia MP</div>
-          <a href="https://www.linkedin.com/in/gerikirilova/" target="_blank" class="callButton shortButton">About</a>
-        </div>
-        <div class="flexColumn flexCenter speakerBox reveal">
-          <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
-          <div class="blackTitle speakerTitle">Frederik Groce</div>
-          <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
-          <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
-        </div>
-        <div class="flexColumn flexCenter speakerBox reveal">
-          <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
-          <div class="blackTitle speakerTitle">Derrick Raphael</div>
-          <div class="greyText">CEO, Founder</div>
-          <a href="https://www.linkedin.com/in/derrickraphael/" target="_blank" class="callButton shortButton">About</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="emptySpace"></div>
-    <div class="emptySpace"></div>
-
-    <div class="infoMargin">
-      <div class="whiteTitle" style="color: #721cff">
-        Startups sourced from:
-      </div>
-      <div class="flexRow flexCenter flexWrap reveal">
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://happyvalley.vc/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
-          </div>
-        </div>
-        <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
-          </div>
-        </div>
-        <!-- <div class="aroundPartner">
-          <div class="flexColumn partnerLogo">
-            <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
-          </div>
-        </div> -->
-      </div>
-      <div class="smallTitle">...and many more to come</div>
-      <div class="accCallButton makeCol addTop">
-        <a href="./angel" class="callButton">ANGELS</a>
-        <a href="./startup" class="callButton">FOUNDERS</a>
-      </div>
-      <div class="emptySpace"></div>
-    </div>
   </div>
 
-  <div class="flexColumn footer">
+  <div class="flexColumn footer" style="background-color: #161b23;">
     <div class="flexRow spaceBetween footerBox">
       <div class="flexColumn">
         <div class="footerTitle">FOR FOUNDERS</div>
