commented out speakers

--- a/angel.html
+++ b/angel.html
@@ -164,7 +164,7 @@
       </div>
 
       <div class="emptySpace"></div>
-      <div class="infoMargin"> 
+      <!-- <div class="infoMargin"> 
         <div class="whiteTitle" style="color: #721cff">
           Our Private Events
         </div>
@@ -208,7 +208,7 @@
           </div>
         </div>
       </div>
-      <div class="emptySpace"></div>
+      <div class="emptySpace"></div> -->
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
           Startups sourced from:
