--- a/startup.html
+++ b/startup.html
@@ -191,7 +191,7 @@
       </div>
       <div class="flexColumn">
         <div class="footerTitle">FOLLOW US</div>
-        <div><a class="footerLink" href="https://www.linkedin.com/company/moonarch" target="_blank">Linkedin</a></div>
+        <div><a class="footerLink" href="https://www.linkedin.com/company/moonarch-io" target="_blank">Linkedin</a></div>
         <div><a class="footerLink" href="https://twitter.com/Moonarch_io" target="_blank">Twitter</a></div>
       </div>
     </div>
