hyper simple version

--- a/index.html
+++ b/index.html
@@ -17,59 +17,35 @@
 <body>
 
 <main>
-  <div id="hidingBox"></div>
-  <div id="navbar">
-    <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
-    <div class="navLinks" id="navLinksEx">
-      <a href="./angel" class="navLink">Investors</a>
-      <a href="./" class="navLink">Founders</a>
-    </div>
-    <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
-    <div id="navExpand" onclick="expandNav()">
-      <div id="bar1"></div>
-      <div id="bar2"></div>
-      <div id="bar3"></div>
-    </div>
-  </div>
 	<!-- Main header view -->
 	<div class="header">
-      <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
-  		<p class="headerTitle">
-  			Raise and invest among the <span style="color:#721cff; font-family: dmBold;">best</span> founders and investors
-  		</p> 
+      <div class="topContacts">
+        <a href="https://calendly.com/inayatirfan/30min?month=2023-05" target="_blank" class="contactImg calendlyContact"></a>
+        <a href=https://www.linkedin.com/in/inayat-irfan/ target="_blank" class="contactImg linkedinContact"></a>
+        <!-- <img class="mainContact" src="./assets/calendly.png" />
+        <img class="mainContact" src="./assets/calendly.png" /> -->
+      </div>
+      <img class="logoTitleMain" src="./assets/logoText-white.png" />
+      <div class="numText bigNumText">Connect with the startups <br>of <span style="color: #721cff">tomorrow</span></div>
+      <div class="column800">
+        <div class="flexColumn numCol">
+          <div class="num">30</div>
+          <div class="numText">accelerators</div>
+        </div>
+        <div class="flexColumn numCol">
+          <div class="num">80<span class="num" style="font-size: 30px; line-height: 0; margin: 0">+</span></div>
+          <div class="numText">angels</div>
+        </div>
+        <div class="flexColumn numCol">
+          <div class="num">1500<span class="num" style="font-size: 30px; line-height: 0; margin: 0">+</span></div>
+          <div class="numText">startups</div>
+        </div>
+        <!-- <div class="flexColumn numCol">
+          <div class="num">5<span class="num" style="font-size: 80px"></span></div>
+          <div class="numText">speakers</div>
+        </div> -->
+      </div>
 	</div>
-  <div class="mainPage">
-    <div class="secondHeader makeCol">
-      <div class="headerSubTitle">I am...</div>
-      <div class="flexRow">
-        <a href="./angel" class="callButton halfScreen">AN ANGEL</a>
-        <a href="./startup" class="callButton halfScreen">A FOUNDER</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="flexColumn footer" style="background-color: #161b23;">
-    <div class="flexRow spaceBetween footerBox">
-      <div class="flexColumn">
-        <div class="footerTitle">FOR FOUNDERS</div>
-        <div><a class="footerLink" href="./startup">Learn More</a></div>
-        <div><a class="footerLink" href="./startup-form">Apply to Raise</a></div>
-      </div>
-      <div class="flexColumn">
-        <div class="footerTitle">FOR ANGELS</div>
-        <div><a class="footerLink" href="./angel">Learn More</a></div>
-        <div><a class="footerLink" href="./angel-form">Apply to Join</a></div>
-      </div>
-      <div class="flexColumn">
-        <div class="footerTitle">FOLLOW US</div>
-        <div><a class="footerLink" href="https://www.linkedin.com/company/moonarch-io" target="_blank">Linkedin</a></div>
-        <div><a class="footerLink" href="https://twitter.com/Moonarch_io" target="_blank">Twitter</a></div>
-      </div>
-    </div>
-    <div class="flexRow spaceBetween footerBox" style="border-top: thin solid darkgray; margin-top: 30px;">
-      <div>&copy; 2023 Moonarch</div>
-    </div>
-  </div>
 </main>
 </body>
 </html>
