--- a/index.html
+++ b/index.html
@@ -16,36 +16,28 @@
 </head>
 <body>
 
-<main>
+<main class="header">
 	<!-- Main header view -->
-	<div class="header">
-      <div class="topContacts">
-        <a href="https://calendly.com/inayatirfan/30min?month=2023-05" target="_blank" class="contactImg calendlyContact"></a>
-        <a href=https://www.linkedin.com/in/inayat-irfan/ target="_blank" class="contactImg linkedinContact"></a>
-        <!-- <img class="mainContact" src="./assets/calendly.png" />
-        <img class="mainContact" src="./assets/calendly.png" /> -->
+    <div class="topContacts">
+      <a href="https://calendly.com/inayatirfan/30min?month=2023-05" target="_blank" class="contactImg calendlyContact"></a>
+      <a href=https://www.linkedin.com/in/inayat-irfan/ target="_blank" class="contactImg linkedinContact"></a>
+    </div>
+    <img class="logoTitleMain" src="./assets/logoText-white.png" />
+    <div class="numText bigNumText">Connect with the startups <br>of <span style="color: #721cff">tomorrow</span></div>
+    <div class="column800">
+      <div class="flexColumn numCol">
+        <div class="num">30</div>
+        <div class="numText">accelerators</div>
       </div>
-      <img class="logoTitleMain" src="./assets/logoText-white.png" />
-      <div class="numText bigNumText">Connect with the startups <br>of <span style="color: #721cff">tomorrow</span></div>
-      <div class="column800">
-        <div class="flexColumn numCol">
-          <div class="num">30</div>
-          <div class="numText">accelerators</div>
-        </div>
-        <div class="flexColumn numCol">
-          <div class="num">80<span class="num" style="font-size: 30px; line-height: 0; margin: 0">+</span></div>
-          <div class="numText">angels</div>
-        </div>
-        <div class="flexColumn numCol">
-          <div class="num">1500<span class="num" style="font-size: 30px; line-height: 0; margin: 0">+</span></div>
-          <div class="numText">startups</div>
-        </div>
-        <!-- <div class="flexColumn numCol">
-          <div class="num">5<span class="num" style="font-size: 80px"></span></div>
-          <div class="numText">speakers</div>
-        </div> -->
+      <div class="flexColumn numCol">
+        <div class="num">80<span class="num" style="font-size: 30px; line-height: 0; margin: 0">+</span></div>
+        <div class="numText">angels</div>
       </div>
-	</div>
+      <div class="flexColumn numCol">
+        <div class="num">1500<span class="num" style="font-size: 30px; line-height: 0; margin: 0">+</span></div>
+        <div class="numText">startups</div>
+      </div>
+    </div>
 </main>
 </body>
 </html>
