--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" height="45px">
 	  </a>
 
+	<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
 	  <button type="button" class="blueButton fixedNav" href="moonarch.io/form" target="_blank">
 		<span class="blueButtonInner" style="width: 120px">
 			<span>Apply now</span>
@@ -29,6 +30,7 @@
 			</span>
 		</span>
 	</button>
+	</a>
 
   	<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body">
 	    <div class="col-md-6 mx-auto">
