--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 		</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 blueBox">
 			<div class="greyBoxTitle" style="color: white">Join our community today</div>
+			<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
 			<button type="button" class="blueButton" style="width: 240px" href="moonarch.io/form" target="_blank">
 				<span class="blueButtonInner"style="width: 120px">
 					<span>Apply now</span>
@@ -188,6 +189,7 @@
 					</span>
 				</span>
 			</button>
+			</a>
 		</div>
 	</div>
   	<div class="stepBoxes">
@@ -305,13 +307,13 @@
 		          </li>
 		        </ul>
 		    </div> -->
-			<a href="mailto:team@moonarch.io" style="text-decoration: none; color: #FFFFFF;">
-				<p><i class="fa fa-lg fa-envelope mr-3" style="color: #721CFF;"></i>&nbsp;&nbsp;team@moonarch.io</p>
-			</a>
 			<p>
 				<a href="https://www.linkedin.com/company/moonarch-io/"><i class="fa fa-lg fa-linkedin-square" style="color: #721CFF;"></i></a>&nbsp;&nbsp;
 				<a href="https://twitter.com/Moonarch_io"><i class="fa fa-lg fa-twitter" style="color: #721CFF;"></i></a>
 			</p>
+			<a href="mailto:team@moonarch.io" style="text-decoration: none; color: #FFFFFF;">
+				<p><i class="fa fa-lg fa-envelope mr-3" style="color: #721CFF;"></i>&nbsp;&nbsp;team@moonarch.io</p>
+			</a>
 		    <!-- <div class="col-lg-4 col-xs-12 location">
 		      <h4 class="mt-lg-0 mt-sm-4 mb-4">Contact</h4>
 		      
