--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 	<!-- Navbar -->
 	<!-- d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none -->
-	  <a href="https://moonarch.io/" class="" style="margin-top: 10px; margin-left: 10px; z-index: 5">
-		<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" height="45px">
+	  <a href="https://moonarch.io/" id="mainLogo">
+		<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" style="width: 100%; height: 100%">
 	  </a>
 
 	  <button type="button" class="blueButton fixedNav" href="moonarch.io/form" target="_blank">
@@ -30,12 +30,12 @@
 		</span>
 	</button>
 
-  	<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body">
+  	<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body headerPhone">
 	    <div class="col-md-6 mx-auto">
 			<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
-	      <h1 class="display-3 mb-3 fw-bold">Find investors for your startup</h1>
-	      <h3 class="fw-normal text-muted mb-3">No cuts or fees taken from Moonarch</h4>
-	      <div class="d-flex gap-3 pt-5 justify-content-center lead fw-normal">
+	      <h1 class="display-3 mb-3 fw-bold phoneTitle">Find investors for your startup</h1>
+	      <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken from Moonarch</h4>
+	      <div class="d-flex gap-3 lead fw-normal phoneMainButton">
 	        <a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
 	          <button type="button" class="blueButton bigBlue">
 					<span class="blueButtonInner">
@@ -56,7 +56,7 @@
 
 
   	<div class="container px-5 py-5 text-center" id="stats">
-		<div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
+		<div class="row g-4 row-cols-lg-4 statRow">
 			<div class="feature col">
 			    <div class="card-body">
 	              <h1 class="card-title pricing-card-title" style="color: #ffffff;">
@@ -277,7 +277,7 @@
 		  <div class="row">
 		    <div class="col-lg-5 col-xs-12 about-company">
 		    <a href="https://moonarch.io/">
-		      	<img src="./assets/MoonarchLogo.png" class="mb-3" alt="Moonarch" height="60px">
+		      	<img src="./assets/MoonarchLogo.png" alt="Moonarch" id="bottomLogo">
 		    </a>
 		    </div>
 		    <!-- <div class="col-lg-3 col-xs-12 links">
