--- a/index.html
+++ b/index.html
@@ -32,89 +32,91 @@
 	</button>
 	</a>
 
-  	<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body headerPhone">
-	    <div class="col-md-6 mx-auto">
-			<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
-	      <h1 class="display-3 mb-3 fw-bold phoneTitle">Find investors for your startup</h1>
-	      <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken from Moonarch</h4>
-	      <div class="d-flex gap-3 lead fw-normal phoneMainButton">
-	        <a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
-	          <button type="button" class="blueButton bigBlue">
-					<span class="blueButtonInner">
-						<span>Find investors</span>
-						<span class="arrows">
-							<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
-							<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+  	<div class="header">
+		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body headerPhone">
+			<div class="col-md-6 mx-auto">
+				<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
+			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Find investors for your startup</h1>
+			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken from Moonarch</h4>
+			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
+				<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
+				  <button type="button" class="blueButton bigBlue">
+						<span class="blueButtonInner">
+							<span>Find investors</span>
+							<span class="arrows">
+								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+							</span>
 						</span>
-					</span>
-				</button>
-	        </a>
-	      </div>
-	    </div>
-	    <div class="product-device shadow-sm d-none d-md-block"></div>
-	    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-  	</div>
-
-
-
-  	<div class="container px-5 py-5 text-center" id="stats">
-		<div class="row g-4 row-cols-lg-4 statRow">
-			<div class="feature col">
-			    <div class="card-body">
-	              <h1 class="card-title pricing-card-title" style="color: #ffffff;">
-	              	50
-	              </h1>
-	              <ul class="list-unstyled mt-3 alignL">
-	                <li style="color: #ffffff">
-	                	accelerators
-	                </li>
-	              </ul>
-	            </div>
+					</button>
+				</a>
+			  </div>
 			</div>
-
-			<div class="feature col">
-			    <div class="card-body">
-	              <h1 class="card-title pricing-card-title" style="color: #ffffff;">
-	              	1,500<span style="font-size: 25px">+</span>
-	              </h1>
-	              <ul class="list-unstyled mt-3 alignL">
-	                <li style="color: #ffffff">
-	                	startups
-	                </li>
-	              </ul>
-	            </div>
+			<div class="product-device shadow-sm d-none d-md-block"></div>
+			<div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+		  </div>
+	
+	
+	
+		  <div class="container px-5 py-5 text-center" id="stats">
+			<div class="row g-4 row-cols-lg-4 statRow">
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: #ffffff;">
+						  50
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL">
+						<li style="color: #ffffff">
+							accelerators
+						</li>
+					  </ul>
+					</div>
+				</div>
+	
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: #ffffff;">
+						  1,500<span style="font-size: 25px">+</span>
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL">
+						<li style="color: #ffffff">
+							startups
+						</li>
+					  </ul>
+					</div>
+				</div>
+	
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: #ffffff;">
+						  80<span style="font-size: 25px">+</span>
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL">
+						<li style="color: #ffffff">
+							angels
+						</li>
+					  </ul>
+					</div>
+				</div>
+	
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: #ffffff;">
+						  10
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL">
+						<li style="color: #ffffff">
+							VCs
+						</li>
+					  </ul>
+					</div>
+				</div>
 			</div>
-
-			<div class="feature col">
-			    <div class="card-body">
-	              <h1 class="card-title pricing-card-title" style="color: #ffffff;">
-	              	80<span style="font-size: 25px">+</span>
-	              </h1>
-	              <ul class="list-unstyled mt-3 alignL">
-	                <li style="color: #ffffff">
-	                	angels
-	                </li>
-	              </ul>
-	            </div>
-			</div>
-
-			<div class="feature col">
-			    <div class="card-body">
-	              <h1 class="card-title pricing-card-title" style="color: #ffffff;">
-	              	10
-	              </h1>
-	              <ul class="list-unstyled mt-3 alignL">
-	                <li style="color: #ffffff">
-	                	VCs
-	                </li>
-	              </ul>
-	            </div>
-			</div>
-		</div>
-  	</div>
+		  </div>
+	</div>
 
 	<div class="networkSticky">
-		<div class="overflow-hidden mt-5 p-3 p-md-5 m-md-3 stickyBox" style="height: fit-content">
+		<div class="overflow-hidden p-3 p-md-5 m-md-3 stickyBox" style="height: fit-content">
 			<h2 class="align-items-center" style="padding-bottom: 0">
 			  The Moonarch Network
 		  	</h2>
