--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
 	<div class="networkSticky">
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 stickyBox" style="height: fit-content">
-			<h2 class="align-items-center" style="padding-bottom: 0">
-			  The Moonarch Network
+			<h2 class="align-items-center networkSmall" style="padding-bottom: 0">
+			  Our Network
 		  	</h2>
 	  	</div>
-		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox" style="color: #454545;">
+		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sOne" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				INVESTORS & ADVISORS
 			</h5>
@@ -158,21 +158,21 @@
 				</div>
 			</div>
 		</div>
-		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox" style="color: #454545; top: 150px">
+		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sTwo" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				RAISE MONEY
 			</h5>
 			<div class="greyBoxTitle">Raise $1M rounds</div>
 			<span class="greyBoxText">On average, startups in our network raise between $500k and $1M rounds from top venture firms, angel investors and funds. A total of $20M is raised by Moonarch startups each month in $5k to $500k cheques.</span>
 		</div>
-		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox" style="color: #454545; top: 200px">
+		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sThree" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				FOUNDER COMMUNITY
 			</h5>
 			<div class="greyBoxTitle">Join a community of the most dynamic founders in North America</div>
 			<span class="greyBoxText">A curated community that will help you build your startup.</span>
 		</div>
-		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox" style="color: #454545; top: 250px">
+		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				STAY UPDATED
 			</h5>
