blank link targets

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 		        </ul>
 		    </div> -->
 			<p>
-				<a href="https://www.linkedin.com/company/moonarch-io/"><i class="fa fa-lg fa-linkedin-square" style="color: #721CFF;"></i></a>&nbsp;&nbsp;
-				<a href="https://twitter.com/Moonarch_io"><i class="fa fa-lg fa-twitter" style="color: #721CFF;"></i></a>
+				<a href="https://www.linkedin.com/company/moonarch-io/" target="_blank"><i class="fa fa-lg fa-linkedin-square" style="color: #721CFF;"></i></a>&nbsp;&nbsp;
+				<a href="https://twitter.com/Moonarch_io" target="_blank"><i class="fa fa-lg fa-twitter" style="color: #721CFF;"></i></a>
 			</p>
 			<a href="mailto:team@moonarch.io" style="text-decoration: none; color: #FFFFFF;">
 				<p><i class="fa fa-lg fa-envelope mr-3" style="color: #721CFF;"></i>&nbsp;&nbsp;team@moonarch.io</p>
