--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	  <a href="https://moonarch.io/" id="mainLogo">
 		<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" style="width: 100%; height: 100%">
 	  </a>
+	<div class="backLine midLine" style="left: 13vw"></div>
+	<div class="backLine" style="left: 25vw"></div>
+	<div class="backLine midLine" style="left: 38vw"></div>
+	<div class="backLine" style="left: 50vw"></div>
+	<div class="backLine midLine" style="left: 63vw"></div>
+	<div class="backLine" style="left: 75vw"></div>
+	<div class="backLine midLine" style="left: 88vw"></div>
 
 	<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
 	  <button type="button" class="blueButton fixedNav" href="moonarch.io/form" target="_blank">
@@ -33,11 +40,11 @@
 	</a>
 
   	<div class="header">
-		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body headerPhone">
+		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center headerPhone">
 			<div class="col-md-6 mx-auto">
 				<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
-			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Find investors for your startup</h1>
-			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken from Moonarch</h4>
+			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Meet investors for your startup</h1>
+			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees</h4>
 			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
 				<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
 				  <button type="button" class="blueButton bigBlue">
@@ -55,8 +62,6 @@
 			<div class="product-device shadow-sm d-none d-md-block"></div>
 			<div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 		  </div>
-	
-	
 	
 		  <div class="container px-5 py-5 text-center" id="stats">
 			<div class="row g-4 row-cols-lg-4 statRow">
@@ -115,11 +120,13 @@
 		  </div>
 	</div>
 
+
 	<div class="networkSticky">
-		<div class="overflow-hidden p-3 p-md-5 m-md-3 stickyBox" style="height: fit-content">
-			<h2 class="align-items-center networkSmall" style="padding-bottom: 0">
+		<div class="stickyBox" style="height: fit-content">
+			<!-- <h2 class="align-items-center networkSmall greyBoxTitle" style="padding-bottom: 0">
 			  Our Network
-		  	</h2>
+		  	</h2> -->
+			<div class="greyBoxTitle">Our Network</div>
 	  	</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sOne" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
@@ -129,32 +136,32 @@
 			<div class="greyBoxText">The Moonarch community comprises executives from leading tech companies and startups in North America</div>
 			<div class="logos pb-5">
 				<div class="logos-slide">
-					<img src="./assets//bcg.png" height="200px">
-				  <img src="./assets//coinbase.png" height="200px">
-				  <img src="./assets//microsoft.png" height="200px">
-				  <img src="./assets//dialogue.png" height="200px">
-				  <img src="./assets//google.png" height="200px">
-				  <img src="./assets//deloitte.png" height="200px">
-				  <img src="./assets//scale.png" height="200px">
-				  <img src="./assets//wealthsimple.png" height="200px">
-				  <img src="./assets//superhuman.png" height="200px">
-				  <img src="./assets//clearco.png" height="200px">
-				  <img src="./assets//amazon.png" height="200px">
-				  <img src="./assets//hopper.png" height="200px">				
+					<img src="./assets//bcg.png" height="300px">
+				  <img src="./assets//coinbase.png" height="300px">
+				  <img src="./assets//microsoft.png" height="300px">
+				  <img src="./assets//dialogue.png" height="300px">
+				  <img src="./assets//google.png" height="300px">
+				  <img src="./assets//deloitte.png" height="300px">
+				  <img src="./assets//scale.png" height="300px">
+				  <img src="./assets//wealthsimple.png" height="300px">
+				  <img src="./assets//superhuman.png" height="300px">
+				  <img src="./assets//clearco.png" height="300px">
+				  <img src="./assets//amazon.png" height="300px">
+				  <img src="./assets//hopper.png" height="300px">				
 				</div>
 				<div class="logos-slide">
-					<img src="./assets//bcg.png" height="200px">
-				  <img src="./assets//coinbase.png" height="200px">
-				  <img src="./assets//microsoft.png" height="200px">
-				  <img src="./assets//dialogue.png" height="200px">
-				  <img src="./assets//google.png" height="200px">
-				  <img src="./assets//deloitte.png" height="200px">
-				  <img src="./assets//scale.png" height="200px">
-				  <img src="./assets//wealthsimple.png" height="200px">
-				  <img src="./assets//superhuman.png" height="200px">
-				  <img src="./assets//clearco.png" height="200px">
-				  <img src="./assets//amazon.png" height="200px">
-				  <img src="./assets//hopper.png" height="200px">	
+					<img src="./assets//bcg.png" height="300px">
+				  <img src="./assets//coinbase.png" height="300px">
+				  <img src="./assets//microsoft.png" height="300px">
+				  <img src="./assets//dialogue.png" height="300px">
+				  <img src="./assets//google.png" height="300px">
+				  <img src="./assets//deloitte.png" height="300px">
+				  <img src="./assets//scale.png" height="300px">
+				  <img src="./assets//wealthsimple.png" height="300px">
+				  <img src="./assets//superhuman.png" height="300px">
+				  <img src="./assets//clearco.png" height="300px">
+				  <img src="./assets//amazon.png" height="300px">
+				  <img src="./assets//hopper.png" height="300px">				
 				</div>
 			</div>
 		</div>
@@ -172,13 +179,13 @@
 			<div class="greyBoxTitle">Join a community of the most dynamic founders in North America</div>
 			<span class="greyBoxText">A curated community that will help you build your startup.</span>
 		</div>
-		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
+		<!-- <div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				STAY UPDATED
 			</h5>
 			<div class="greyBoxTitle">Get frequent updates and insights on the startup world</div>
 			<span class="greyBoxText">Read a weekly newsletter.</span>
-		</div>
+		</div> -->
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 blueBox">
 			<div class="greyBoxTitle" style="color: white">Join our community today</div>
 			<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
@@ -236,7 +243,7 @@
   	</div>
 
 	<div class="container">
-		<h2 class="greyBoxTitle">FAQ</h2>
+		<div class="greyBoxTitle">FAQ</div>
 
   	<div id="accordion" class="pb-5">
 			<div style="overflow: hidden">
