--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
 	<link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
 </head>
 <body>
-
-	<!-- Navbar -->
-	<!-- d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none -->
-	  <a href="https://moonarch.io/" id="mainLogo">
-		<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" style="width: 100%; height: 100%">
-	  </a>
 	<div class="backLine midLine" style="left: 13vw"></div>
 	<div class="backLine" style="left: 25vw"></div>
 	<div class="backLine midLine" style="left: 38vw"></div>
@@ -27,17 +21,27 @@
 	<div class="backLine" style="left: 75vw"></div>
 	<div class="backLine midLine" style="left: 88vw"></div>
 
-	<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
-	  <button type="button" class="blueButton fixedNav" href="moonarch.io/form" target="_blank">
-		<span class="blueButtonInner" style="width: 120px">
-			<span>Apply now</span>
-			<span class="arrows">
-				<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
-				<img src="./assets/icon/arrow.png" class="arrowIcon"/>
-			</span>
-		</span>
-	</button>
-	</a>
+	<!-- Navbar -->
+	<div class="container px-3 py-3">
+		<div class="customNavbar">
+			<a href="https://moonarch.io/" id="mainLogo">
+				<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" style="width: 100%; height: 100%">
+			  </a>
+		
+			<a href="https://moonarch.io/form" target="_blank">
+			  <button type="button" class="blueButton fixedNav" href="moonarch.io/form" target="_blank">
+				<span class="blueButtonInner" style="width: 120px">
+					<span>Apply now</span>
+					<span class="arrows">
+						<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+						<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+					</span>
+				</span>
+			</button>
+			</a>
+		</div>
+	</div>
+	<!-- d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none -->
 
   	<div class="header">
 		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center headerPhone">
