--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<!-- <h2 class="align-items-center networkSmall greyBoxTitle" style="padding-bottom: 0">
 			  Our Network
 		  	</h2> -->
-			<div class="greyBoxTitle">Our Network</div>
+			<div class="greyBoxTitle">Our Ecosystem</div>
 	  	</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sOne" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
@@ -174,14 +174,14 @@
 				RAISE MONEY
 			</h5>
 			<div class="greyBoxTitle">Raise $1M rounds</div>
-			<span class="greyBoxText">On average, startups in our network raise between $500k and $1M rounds from top venture firms, angel investors and funds. A total of $20M is raised by Moonarch startups each month in $5k to $500k cheques.</span>
+			<span class="greyBoxText">On average, startups in our network raise between <span class="bolder">$500k</span> and <span class="bolder">$1M</span> rounds from top venture firms, angel investors and funds. A total of <span class="bolder">$20M</span> is raised by Moonarch startups each month in <span class="bolder">$5k</span> to <span class="bolder">$500k</span> cheques.</span>
 		</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sThree" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				FOUNDER COMMUNITY
 			</h5>
 			<div class="greyBoxTitle">Join a community of the most dynamic founders in North America</div>
-			<span class="greyBoxText">A curated community that will help you build your startup.</span>
+			<span class="greyBoxText">Moonarch offers a curated community of current and exited founders. Whether you're look to build, scale or even discuss ideas, this is the place for you. Discover connections that will launch your dream to the moon.</span>
 		</div>
 		<!-- <div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
