--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="col-md-6 mx-auto">
 				<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
 			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Meet investors for your startup</h1>
-			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees</h4>
+			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken</h4>
 			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
 				<a class="icon-link" href="https://moonarch.io/form" target="_blank" style="color: #721CFF; text-decoration: none;">
 				  <button type="button" class="blueButton bigBlue">
@@ -171,17 +171,100 @@
 		</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sTwo" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
-				RAISE MONEY
+				FUNDING
 			</h5>
 			<div class="greyBoxTitle">Raise $1M rounds</div>
-			<span class="greyBoxText">On average, startups in our network raise between <span class="bolder">$500k</span> and <span class="bolder">$1M</span> rounds from top venture firms, angel investors and funds. A total of <span class="bolder">$20M</span> is raised by Moonarch startups each month in <span class="bolder">$5k</span> to <span class="bolder">$500k</span> cheques.</span>
+			<!-- <span class="greyBoxText">Raise money through our investors</span> -->
+			<div class="row g-4 row-cols-lg-4 statRow" style="margin-top: 10px">
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: var(--moonBlue);">
+						  $500k
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL greyBoxText">
+						<li style="color: var(--moonBlack)">
+							average check size
+						</li>
+					  </ul>
+					</div>
+				</div>
+	
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: var(--moonBlue);">
+						  $20M
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL greyBoxText">
+						<li style="color: var(--moonBlack)">
+							raised per month
+						</li>
+					  </ul>
+					</div>
+				</div>
+	
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: var(--moonBlue);">
+						  85%
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL greyBoxText">
+						<li style="color: var(--moonBlack);">
+							of our startups are early stage
+						</li>
+					  </ul>
+					</div>
+				</div>
+
+				<div class="feature col">
+					<div class="card-body">
+					  <h1 class="card-title pricing-card-title" style="color: var(--moonBlue);">
+						  53%
+					  </h1>
+					  <ul class="list-unstyled mt-3 alignL greyBoxText">
+						<li style="color: var(--moonBlack);">
+							of our startups are pre-seed
+						</li>
+					  </ul>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sThree" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				FOUNDER COMMUNITY
 			</h5>
 			<div class="greyBoxTitle">Join a community of the most dynamic founders in North America</div>
-			<span class="greyBoxText">Moonarch offers a curated community of current and exited founders. Whether you're look to build, scale or even discuss ideas, this is the place for you. Discover connections that will launch your dream to the moon.</span>
+			<span class="greyBoxText">Moonarch offers a curated community of current and exited founders.</span>
+			<div class="logos pb-5">
+				<div class="logos-slide">
+					<img src="./assets/acceleratorLogo/yc.png" height="300px">
+					<img src="./assets/acceleratorLogo/techstars.png" height="300px">	
+				  	<img src="./assets/acceleratorLogo/communitech.png" height="300px">	
+				  	<img src="./assets/acceleratorLogo/antler.png" height="300px">
+				  	<img src="./assets/acceleratorLogo/ondeck.png" height="300px">
+				  	<img src="./assets/acceleratorLogo/cdl.png" height="300px">
+				  <img src="./assets/acceleratorLogo/next36.png" height="300px">
+				  <img src="./assets/acceleratorLogo/fintechcadence.png" height="300px">
+				  <img src="./assets/acceleratorLogo/gator" height="300px">
+				  <img src="./assets/acceleratorLogo/skyventures.png" height="300px">
+				  <img src="./assets/acceleratorLogo/jumbo.png" height="300px">
+				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
+				</div>
+				<div class="logos-slide">
+					<img src="./assets/acceleratorLogo/antler.png" height="300px">
+				  <img src="./assets/acceleratorLogo/ondeck.png" height="300px">
+				  <img src="./assets/acceleratorLogo/cdl.png" height="300px">
+				  <img src="./assets/acceleratorLogo/next36.png" height="300px">
+				  <img src="./assets/acceleratorLogo/fintechcadence.png" height="300px">
+				  <img src="./assets/acceleratorLogo/gator" height="300px">
+				  <img src="./assets/acceleratorLogo/skyventures.png" height="300px">
+				  <img src="./assets/acceleratorLogo/jumbo.png" height="300px">
+				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">
+				  <img src="./assets/acceleratorLogo/techstars.png" height="300px">
+				  <img src="./assets/acceleratorLogo/yc.png" height="300px">
+				  <img src="./assets/acceleratorLogo/communitech.png" height="300px">				
+				</div>
+			</div>
 		</div>
 		<!-- <div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
