--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
 			<span class="greyBoxText">Moonarch offers a curated community of current and exited founders.</span>
 			<div class="logos pb-5">
 				<div class="logos-slide">
+					<img src="assets/acceleratorLogo/fintechcadence.png" height="300px">
+				  <img src="assets/acceleratorLogo/gator.png" height="300px">
 					<img src="./assets/acceleratorLogo/yc.png" height="300px">
 					<img src="./assets/acceleratorLogo/techstars.png" height="300px">	
 				  	<img src="./assets/acceleratorLogo/communitech.png" height="300px">	
@@ -244,13 +246,14 @@
 				  	<img src="./assets/acceleratorLogo/ondeck.png" height="300px">
 				  	<img src="./assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="./assets/acceleratorLogo/next36.png" height="300px">
-				  <img src="./assets/acceleratorLogo/fintechcadence.png" height="300px">
-				  <img src="./assets/acceleratorLogo/gator.png" height="300px">
+
 				  <img src="./assets/acceleratorLogo/skyventures.png" height="300px">
 				  <img src="./assets/acceleratorLogo/jumbo.png" height="300px">
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
 				<div class="logos-slide">
+					<img src="/assets/acceleratorLogo/fintechcadence.png" height="300px">
+				  <img src="/assets/acceleratorLogo/gator.png" height="300px">
 					<img src="./assets/acceleratorLogo/yc.png" height="300px">
 					<img src="./assets/acceleratorLogo/techstars.png" height="300px">	
 				  	<img src="./assets/acceleratorLogo/communitech.png" height="300px">	
@@ -258,8 +261,7 @@
 				  	<img src="./assets/acceleratorLogo/ondeck.png" height="300px">
 				  	<img src="./assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="./assets/acceleratorLogo/next36.png" height="300px">
-				  <img src="./assets/acceleratorLogo/fintechcadence.png" height="300px">
-				  <img src="./assets/acceleratorLogo/gator.png" height="300px">
+				  
 				  <img src="./assets/acceleratorLogo/skyventures.png" height="300px">
 				  <img src="./assets/acceleratorLogo/jumbo.png" height="300px">
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
