--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				FUNDING
 			</h5>
-			<div class="greyBoxTitle">Raise $1M rounds</div>
+			<div class="greyBoxTitle">Raise up to $1M rounds</div>
 			<!-- <span class="greyBoxText">Raise money through our investors</span> -->
 			<div class="row g-4 row-cols-lg-4 statRow" style="margin-top: 10px">
 				<div class="feature col">
@@ -233,8 +233,8 @@
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
 				FOUNDER COMMUNITY
 			</h5>
-			<div class="greyBoxTitle">Join a community of the most dynamic founders in North America</div>
-			<span class="greyBoxText">Moonarch offers a curated community of current and exited founders.</span>
+			<div class="greyBoxTitle">Join a community of 3000+ founders</div>
+			<span class="greyBoxText">Our network includes founders from some of the most dynamic startups and accelerators in North America</span>
 			<div class="logos pb-5">
 				<div class="logos-slide">
 					<img src="assets/acceleratorLogo/yc.png" height="300px">
