--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
 		</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sThree" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
-				FOUNDER COMMUNITY
+				FOUNDER COMMUNITY*
 			</h5>
-			<div class="greyBoxTitle">Join a community of 3000+ founders</div>
+			<div class="greyBoxTitle">Join a community of 500+ founders</div>
 			<span class="greyBoxText">Our network includes founders from some of the most dynamic startups and accelerators in North America</span>
 			<div class="logos pb-5">
 				<div class="logos-slide">
@@ -265,6 +265,7 @@
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
 			</div>
+			<span class="greyBoxText" style="font-size: 13px">*coming soon</span>
 		</div>
 		<!-- <div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
 			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
