--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					</div>
 				</div>
 	
-				<div class="feature col">
+				<!-- <div class="feature col">
 					<div class="card-body">
 					  <h1 class="card-title pricing-card-title" style="color: var(--moonBlue);">
 						  $20M
@@ -200,7 +200,7 @@
 						</li>
 					  </ul>
 					</div>
-				</div>
+				</div> -->
 	
 				<div class="feature col">
 					<div class="card-body">
